# minimax-support

./: README.md  install.sh  pyproject.toml
.openclaw/skills/minimax-support/: SKILL.md
src/minimax_support/: cli.py  client.py
