[project]
name = "minimax-support"
version = "0.1.0"
description = "MiniMax Token Plan CLI — web search and image understanding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.scripts]
minimax-support = "minimax_support.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minimax_support"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]
